# paw_detective

./: .flake8  .pre-commit-config.yaml  README.md  docker-compose.yaml  requirements.txt  setup.cfg
.github/workflows/: pre_commit_and_test.yml
api/: Dockerfile  app.py
api/schemas/: input.py  response.py
app/: Dockerfile
app/config/: train.yaml
app/run/: data2pipeline.py  train.py
docs/: application.md  dataset.md  introduction.md  results.md  scripts.md  training.md  weights.md
scripts/: application.sh  dataset.sh  train.sh  weights.sh
src/paw/dataloader/mask/: __init__.py  converter.py
src/paw/schemas/dataloader/: __init__.py  annotation.py  generic.py
src/paw/utils/experiments/: __init__.py  naming.py
src/paw/utils/experiments/src/: words.txt
webui/: Dockerfile  app.py
webui/static/: scripts.js  styles.css
webui/templates/: about.html  index.html  results.html
webui/templates/includes/: footer.html  header.html
