[metadata]
name = paw
version = 0.0.1
authors = Rafael Felix
author_email = rafafelixphd@gmail.com
description = utils helpers for Machine Learning paw-detective project
long_description = file: README.md, LICENSE
keywords = paw, paw-detective
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
python_requires = >=3.10, <4
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
* = *.md
paw.utils.experiments = *.txt
